# pulseQ

./: .dockerignore  .env.example  .gitignore  Dockerfile.base  README.md  docker-compose.yml  init_db.sql  opentelemetry-collector-config.yaml  pyproject.toml  requirements.txt  start_services.py  verify_infra.py
.github/workflows/: ci.yml  update-notification.yml
activity_logs/: activity.txt
connectors/aws/: collector.py
connectors/azure/: collector.py
connectors/gcp/: collector.py
connectors/github/: collector.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: PageLoadingBar.tsx  ProjectSelector.tsx
frontend/src/components/developer/: ImprovementsTab.tsx
frontend/src/context/: NotificationContext.tsx  ProjectContext.tsx  ToastContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AnomalyMap.tsx  Chatbot.tsx  Dashboard.tsx  Developer.tsx  IncidentDetail.tsx  IncidentHistory.tsx  Incidents.tsx  Login.tsx  Predictions.tsx  Pulse.tsx  Repositories.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: neuralops.ts
integrations/github/: integration.py  repo_analyzer.py
integrations/jira/: integration.py
integrations/pagerduty/: integration.py
integrations/slack/: integration.py
models/: chatbot_context_weights.json  feature_columns.json  model_metadata.json
modules/action_executor/: Dockerfile  executor.py  main.py
modules/api/: Dockerfile  main.py
modules/api/background/: __init__.py  website_monitor.py
modules/api/routers/: __init__.py  chatbot.py  integrations.py  notifications.py  predictions.py  reports.py
modules/api/services/: error_service.py
modules/chatbot/: Dockerfile  main.py  service.py
modules/ingestion/: Dockerfile  main.py  service.py
modules/ingestion/collectors/: system_metrics.py
modules/memory/: Dockerfile  main.py  store.py
modules/ml_engine/: Dockerfile  detector.py  main.py
modules/ml_engine/models/: isolation_forest.py  lstm_model.py  prophet_forecaster.py
modules/orchestrator/: Dockerfile  correlator.py  main.py  service.py
modules/rca_engine/: Dockerfile  analyzer.py  context_builder.py  main.py
nginx/: nginx.conf
scripts/: init.sql  seed_data.sql
shared/: config.py  database.py  interfaces.py  schemas.py
shared/llm/: __init__.py  gemini_provider.py  phi3_provider.py
tests/: test_setup.py
training/: analyze_conversations.py  evaluate_chatbot.py  generate_dataset.py  run_simulations.py  seed_chromadb.py  train.py  train_anomaly_models.py  train_incident_classifier.py  train_log_classifier.py  train_rca_model.py  train_remediation_recommender.py
