[tool.poetry]
name = "neuralops"
version = "1.0.0"
description = "NeuralOps — Autonomous AI SRE Intelligence Platform"
authors = ["NeuralOps Team <team@neuralops.ai>"]
readme = "README.md"
packages = [
    { include = "modules" },
    { include = "shared" },
    { include = "connectors" },
    { include = "integrations" },
    { include = "training" },
]

[project]
name = "neuralops"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
]

[tool.poetry.dependencies]
python = "^3.11"

# ── FastAPI & Server ─────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
websockets = "^12.0"
python-multipart = "^0.0.9"

# ── Pydantic & Config ────────────────────────────────────────
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# ── Database ─────────────────────────────────────────────────
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

# ── Redis ────────────────────────────────────────────────────
redis = { extras = ["hiredis"], version = "^5.0.4" }

# ── MongoDB (Motor async driver) ─────────────────────────────
motor = "3.5.1"
pymongo = "4.8.0"

# ── ChromaDB ─────────────────────────────────────────────────
chromadb = "^0.5.0"

# ── ML / AI ──────────────────────────────────────────────────
torch = "^2.3.0"
scikit-learn = "^1.5.0"
prophet = "^1.1.5"
numpy = "^1.26.4"
pandas = "^2.2.2"
joblib = "^1.4.2"
scipy = "^1.13.0"

# ── LLM — Ollama ─────────────────────────────────────────────
ollama = "^0.2.1"

# ── Embeddings (sentence-transformers for ChromaDB seeding) ──
sentence-transformers = "^2.7.0"

# ── Auth ─────────────────────────────────────────────────────
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# ── Cloud Connectors ─────────────────────────────────────────
boto3 = "^1.34.0"
azure-monitor-query = "^1.3.0"
azure-identity = "^1.17.0"
azure-mgmt-costmanagement = "^4.0.0"
azure-mgmt-compute = "^31.0.0"
azure-mgmt-containerservice = "^30.0.0"
google-cloud-monitoring = "2.29.0"
google-cloud-logging = "3.12.1"
google-cloud-billing = "1.13.0"
google-cloud-container = "2.45.0"

# ── DevOps Integrations ──────────────────────────────────────
pdpyras = "^5.2.0"
slack-sdk = "^3.27.1"
jira = "^3.8.0"
PyGithub = "^2.3.0"
python-gitlab = "^4.6.0"

# ── OpenTelemetry ────────────────────────────────────────────
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-asyncpg = "^0.45b0"
opentelemetry-instrumentation-redis = "^0.45b0"

# ── Utilities ────────────────────────────────────────────────
structlog = "^24.1.0"
tenacity = "^8.3.0"
apscheduler = "^3.10.4"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
orjson = "^3.10.3"
rich = "^13.7.1"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^25.3.0"
ruff = "^0.4.9"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
neuralops-train = "training.train:main"
neuralops-validate = "training.validate:main"
neuralops-simulate = "training.simulate:main"
neuralops-backend = "start_services:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=modules --cov=shared --cov=connectors --cov=integrations --cov-report=term-missing --cov-report=html:htmlcov -v"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "TCH", "TID"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
